# blog

./: .env  .env.template  .gitignore  Cargo.toml  Pipfile  README.md
client/: .eslintrc.js  .gitignore  README.md  adb_forward.sh  package-lock.json  package.json  vue.config.js
client/src/: App.vue  App.vue.bak  api-ret.js  api.js  error-code.js  event-bus.js  main.js  mutation-types.js  store-types.js  store.js  utils.js
client/src/assets/: manual.md
client/src/assets/css/: avatar.css  comment.css  comment_item.css  fix.css  page.css
client/src/assets/images/: logo.psb
client/src/components/: About.vue  AddComment.vue  AdminHeader.vue  Article.vue  ArticleEditor.vue  ArticleList.vue  ArticleListByTag.vue  Articles.vue  Avatar.vue  BlinkFocus.vue  Case.vue  CaseEditor.vue  CommentEntity.vue  Comments.vue  Debug.vue  DismissedAlert.vue  EmailVerify.vue  Empty.vue  ErrorPage.vue  FileBrowser.vue  FileEditor.vue  Footer.vue  Header.vue  Home.vue  Home.vue.bak  Login.vue  LoginHeader.vue  MarkdownEditor.vue  MarkdownPreview.vue  NewComment.vue  NotFound.vue  Operation.vue  Result.vue  ResultDiff.vue  Settings.vue  Signup.vue  SubCommentEntity.vue  SubComments.vue  Tags.vue  TaskControl.vue  (+6 more)
client/src/components/controllers/: ActionMenu.vue  BadgeIcon.vue  ButtonSpan.vue  IconText.vue
client/src/components/docs/: manual.md
client/src/components/management/: ActionMenu.vue  AddTagPanel.vue  Articles.vue  DateRangePicker.vue  Management.vue  Statistic.vue  TagEditor.vue  TagPanel.vue  Tags.vue  tag-status.js
client/src/components/notification/: CommentNotification.vue  Notifications.vue
client/src/components/settings/: PersonalSettings.vue  PersonalSettingsMenu.vue  Profile.vue  Security.vue
client/src/components/utils/: ability.js  datetime.js  highlight.js  log.js  theme.css  ui.js  url.js
client/src/routes/: index.js
client/src/store/: index.js
client/src/store/modules/: module-names.js  mutation-types.js  store-types.js  tag.js  user.js
docker/: .gitignore  docker-compose.yml  init.sh  pq_update.sh  schema_views.rs
docker/caddy/: Caddyfile
docker/nginx/: nginx.conf
docker/pg/update-utils/: .gitignore
docker/scripts/: .eslintrc.js  .jshintrc  Pipfile  index.js  log.js  package-lock.json  package.json  test_data.py
docker/src/: schema.rs
docs/: api.md  docker.md  pg.md
migrations/2019-11-05-130211_article_visitor_counter/: down.sql  up.sql
migrations/2019-11-15-004430_daily_statistic/: down.sql  up.sql
migrations/2020-01-03-033431_email_verify/: up.sql
migrations/2020-02-08-035750_email_mention_notify/: down.sql  up.sql
migrations/2020-02-16-121515_new_comment_system/: down.sql  up.sql
migrations/2020-02-23-030126_mailbox/: down.sql  up.sql
migrations/2020-02-28-130335_locate_comment/: down.sql  up.sql
migrations/2020-03-06-135025_comment_notify/: down.sql  up.sql
migrations/2020-03-08-024940_fix_locate_comment/: down.sql  up.sql
migrations/2020-03-09-110527_fix_user_comment_notify/: down.sql  up.sql
migrations/2020-03-10-075909_fix_locate_comment/: down.sql  up.sql
migrations/2020-03-24-121125_fix_comment_notification/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: admin_article_api.rs  admin_chart_data_api.rs  admin_tag_api.rs  admin_user_api.rs  article_api.rs  comment_api.rs  dashboard_api.rs  mail_box_api.rs  mod.rs  recaptcha_api.rs  tag_api.rs  user_api.rs  visitor_api.rs
src/cache/: cron.rs  executor.rs  mod.rs
src/cron/: cache.rs  clear.rs  cron.rs  mod.rs
src/models/: article_tag_relation.rs  articles.rs  comment.rs  daily_statistic.rs  mod.rs  notifys.rs  tag.rs  token.rs  user.rs
src/models/mailbox/: comment_notify_email.html  mail_box.rs  mod.rs
src/util/: cli.rs  context.rs  cookies.rs  debug_middleware.rs  email.rs  env.rs  errors.rs  github_information.rs  mod.rs  path.rs  postgresql_pool.rs  redis_pool.rs  result.rs  verify_email.html
src/web/: admin.rs  visitor.rs
tests/: test_comment.rs
