[package]
name = "blog"
version = "0.2.0"
authors = ["piaoliu <441594700@qq.com>"]
edition = "2018"

[dependencies]
 dotenv = "^0.10.0"
 serde = "^1.0.17"
 serde_json = "^1.0.5"
 serde_derive = "^1.0.17"
 rand = "^0.5"
 tiny-keccak = "^1.3.1"
 comrak = "^0.2.4"
 redis = '^0.8.0'
 r2d2 = '^0.8.1'
 r2d2_redis = '^0.7.0'
 ammonia = "^1.1.0"
 hyper-native-tls = "^0.2.4"
 hyper = "^0.10.13"
 serde_urlencoded = "^0.5.1"

# actix
log = "^0.4.6"
env_logger = "0.6.0"
num_cpus = "1.9.0"
actix = "^0.7.9"
actix-redis = "^0.5.1"
actix-web = "^0.7.18"
actix-diesel = "^0.1.5"

failure = "^0.1.5"

[dependencies.diesel]
features = ["postgres", "chrono", "uuid", "r2d2"]
version = "^1.3.3"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "^0.6.0"

[dependencies.clippy]
optional = true
version = "*"

[features]
default = []
