[package]
authors = ["coimioc <freedom2028@gmail.com>"]
edition = "2018"
name    = "blog"
version = "0.5.0"

[dependencies]
ammonia          = "3.1.0"
clap             = "2.33.1"
comrak           = "0.7.0"
dotenv           = "0.15.0"
hyper            = "^0.13.5"
hyper-native-tls = "0.3.0"
r2d2             = '0.8.8'
r2d2_redis       = '0.13.0'
rand             = "0.7.3"
redis            = '0.15.0'
serde            = { version = "1.0.114", features = ["derive"] }
serde_derive     = "1.0.114"
serde_json       = "1.0.56"
serde_qs         = "0.6.1"
serde_urlencoded = "0.6.1"
tiny-keccak      = { version = "2.0.2", features = ["sha3"] }

# actix
actix             = "0.9.0"
actix-cors        = "0.2.0"
actix-diesel      = "0.3.0"
actix-files       = "0.2.2"
actix-redis       = "0.8.2"
actix-rt          = "1.1.1"
actix-service     = "1.0.5"
actix-web         = "2.0.0"
env_logger        = "0.7.1"
failure           = "0.1.8"
futures           = "0.3.5"
log               = "0.4.8"
num_cpus          = "1.13.0"
pretty_env_logger = "0.4.0"
tera              = "1.3.0"
# The latest version (v0.1.1) of `actix-http` crate now depends on `time` crate v0.1.42 (latest is v0.2), which is not compatable, wait for the update of `actix-http`
actix-http     = "1.0.1"
base64         = "0.12.1"
json           = "0.12.4"
jsonwebtoken   = "7.2.0"
lettre         = "0.9.3"
lettre_email   = "0.9.4"
strip_markdown = "0.2.0"
time           = "0.1.42"
typename       = "0.1.2"
# lettre = { git = "https://github.com/lettre/lettre", branch = "master" }
regex = "1.3.9"

# support socks proxy
reqwest = { version = "0.10.6", features = ["socks", "json"] }

# The diesel crate dependends on v0.1.0, update
# Update this crate will cause the following problem
# - the trait `diesel::Queryable<diesel::sql_types::Numeric, _>` is not implemented for `bigdecimal::BigDecimal`
bigdecimal = { version = "0.1.0", features = ["serde"] }

# to support uuid v0.7.0, the `uuidv07` feature should be enabled
# to support bigdecimal, the `numeric` feature should be enabled
chrono = { features = ["serde"], version = "0.4.11" }
clippy = { version = "*", optional = true }
diesel = { version = "1.4.5", features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
    "uuidv07",
    "numeric",
    "serde_json",
] }
uuid   = { version = "0.8.1", features = ["serde", "v4"] }

[features]
default = []
